--- a/requirements.txt
+++ b/requirements.txt
@@ -1,32 +1,68 @@
+absl-py==2.3.1
 annotated-types==0.7.0
 anyio==4.9.0
+astunparse==1.6.3
 beautifulsoup4==4.13.4
 cachetools==5.5.2
 certifi==2025.7.14
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
+et_xmlfile==2.0.0
 fastapi==0.116.1
+flatbuffers==25.2.10
+gast==0.6.0
 google-auth==2.40.3
 google-genai==1.27.0
+google-pasta==0.2.0
+grpcio==1.74.0
 h11==0.16.0
+h5py==3.14.0
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+joblib==1.5.1
+keras==3.11.0
+libclang==18.1.1
+Markdown==3.8.2
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.3
+namex==0.1.0
+numpy==2.1.3
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.17.0
+packaging==25.0
+protobuf==5.29.5
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pydantic==2.11.7
 pydantic_core==2.33.2
+Pygments==2.19.2
+python-multipart==0.0.20
 requests==2.32.4
+rich==14.1.0
 rsa==4.9.1
+scikit-learn==1.7.1
+scipy==1.16.1
+six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
 starlette==0.47.2
 tenacity==8.5.0
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.31.0
+termcolor==3.1.0
+threadpoolctl==3.6.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
 urllib3==2.5.0
 uvicorn==0.35.0
 websockets==15.0.1
+Werkzeug==3.1.3
+wrapt==1.17.2
